# portfolio-chatbot

./: .gitignore  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: DISREGARD_ci-cd.yml.txt  ci-cd.yml
app/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
app/api/routes/: auth.py  chat.py
app/core/: config.py  context.py  logger.py  openai_client.py  security.py
app/db/: crud.py  models.py  session.py
app/src/: main.py  user_gen.py
app/static/css/: chat.css  chat.css.map  chat.scss  index.css  index.css.map  index.scss  loading.css.map  main.css  main.scss  vars.scss
app/static/js/: chat.js  login.js  renderer.js
app/templates/: chat.html  index.html
app/utils/: user_gen.py
infra/terraform/: main.tf  outputs.tf  variables.tf
infra/terraform-aws/: iam.tf  main.tf  outputs.tf  secrets.tf  setup.sh  terraform.tfvars  user-data.sh.tpl  user_data.sh.tpl  variables.tf
src/: crud.py  db.py  main.py  models.py  schemas.py
static/css/: chat.scss  index.css  index.scss  loading.css  loading.scss  main.css.map  mixins.scss
static/js/: chat.js
templates/: index.html
